--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.5",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
+    "cookie": "^1.0.2",
     "formik": "^2.4.6",
     "next": "16.0.0",
     "react": "19.2.0",
